# secretscan

./: .gitignore  README.md  SECURITY.md  package.json
core/: Cargo.toml
core/src/: lib.rs  main.rs
core/src/hook/: mod.rs
core/src/patterns/: builtin.rs  custom.rs  entropy.rs  mod.rs
core/src/redact/: mod.rs
core/src/store/: mod.rs
hooks/: scan-output.sh
plugin/: tool.json
scripts/: build.sh  install.sh
