[package]
name = "secretscan"
version = "0.1.0"
edition = "2021"
description = "SecretScan — Real-time secret & credential detector for Claude Code. Blocks API keys, tokens, and private keys from entering your LLM context."
license = "MIT"

[[bin]]
name = "secretscan"
path = "src/main.rs"

[lib]
name = "secretscan"
path = "src/lib.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "2"

# Regex
regex = "1"
once_cell = "1"

# SQLite (lossless local storage of redacted originals)
rusqlite = { version = "0.32", features = ["bundled"] }

# Hashing
blake3 = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Colors for terminal output
colored = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
